[gd_scene load_steps=4 format=1]

[ext_resource path="res://ui/UIUpdater.gd" type="Script" id=1]
[ext_resource path="res://ui/uitheme.tres" type="Theme" id=2]
[ext_resource path="res://ui/uithemebig.tres" type="Theme" id=3]

[node name="GameUI" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="BottomRightLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 2 )
margin/left = 536.0
margin/top = 679.0
margin/right = 699.0
margin/bottom = 703.0
text = "[Label]"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BottomLeftLabel" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 2 )
margin/left = 15.0
margin/top = 680.0
margin/right = 136.0
margin/bottom = 704.0
text = "[Label]"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ScoreLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
theme/theme = ExtResource( 3 )
margin/left = 262.0
margin/top = 9.0
margin/right = 455.0
margin/bottom = 73.0
text = "[Label]"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ScoreMultLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 2 )
margin/left = 302.0
margin/top = 75.0
margin/right = 423.0
margin/bottom = 99.0
text = "[Label]"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TopRightLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 2 )
margin/left = 578.0
margin/top = 22.0
margin/right = 699.0
margin/bottom = 46.0
text = "[Label]"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BossProg" type="HBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 11.0
margin/top = 693.0
margin/right = 241.0
margin/bottom = 709.0
custom_constants/separation = 0
alignment = 0


